# djs

./: .RData  .Rhistory  .gitignore  CLAUDE.md  Eastie_UFP.rds  README.md  eastie  eastie_animate.R  eastie_polar_plot.R  explore_data.R  oct20.R  setup.R  shiny_app.R
animation/: .gitignore  README.md  config.py  data_loader.py  ecagp_columns.txt  enhanced_processing.py  enhanced_renderer.py  improved_renderer.py  main.R  main_gpu.R  map_tiles.py  processing.py  render.py  render_all_days.py  render_clear.py  render_simple.py  renderer.py  requirements.txt  site_config.py
animation/gpu_renderer/: Package.swift
animation/gpu_renderer/.build/: build.db  (+1 more)
animation/src/: animate.R  constants.R  data_processing.R  gpu_render.R  maps.R  parallel.R  plot_elements.R  setup.R  video.R
animation_python/: .gitignore  clear_renderer.py  data_loader.py  enhanced_processing.py  enhanced_renderer.py  gpu_renderer.py  main.py  map_tiles.py  pyproject.toml  render_combined.py  render_simple.py  simple_processing.py  simple_renderer.py  video_encoder.py
animation_v1/: eastie  eastie_polar_plot.R
animation_v2/: README_airplane_apis.md  main.R
animation_v2/data/: cape_point_sites.RData
animation_v2/src/: animate.R  constants.R  maps.R  planes.R  setup.R
docs/: data_summary.md  summary.md
last_year/Data Subteam/: AQ RShiny Documentation.docx  Data Insights.pptx  Insights Presentation.pptx  R shiny code.R  Spanish Copy of Galena Park - Air Quality Data Insights.pptx  WQ ECAGP Air Quality Analysis.Rmd
planes/: analyze.py  flight_track.json  main.py
planes/docs/: README.md
(+258 files in other folders)
